# OpenVic

./: .gitignore  CMakeLists.txt
game/src/UI/GameMenu/OptionMenu/: OptionsMenu.gd
